[project]
name = "strata"
version = "0.1.0"
description = "Hierarchical configuration management — YAML, TOML and JSON with Pydantic validation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["configuration", "settings", "yaml", "toml", "json", "pydantic", "hierarchical"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "mergedeep>=1.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
full    = ["pydantic>=2.0"]

[project.urls]
Repository    = "https://github.com/yourorg/strata"
Documentation = "https://github.com/yourorg/strata#readme"

[build-system]
requires      = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

# ---------------------------------------------------------------------------
# UV dev tooling
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pydantic>=2.0",
    "ruff>=0.8",
    "mypy>=1.10",
    "ty>=0.0.22",
    "prek>=0.3.5",
    "commitizen>=4.13.9",
]

[tool.ruff]
target-version = "py311"
line-length    = 100
src            = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict         = true
files          = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
