[project]
name = "imbrex"
version = "0.2.0"
description = "Hierarchical configuration management — YAML, TOML and JSON with Pydantic validation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Johannes Hecher-Wulff", email = "yoshymail@gmail.com" }]
keywords = ["configuration", "settings", "yaml", "toml", "json", "pydantic", "hierarchical"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
full    = ["pydantic>=2.0"]

[project.urls]
Repository    = "https://github.com/hanshannus/imgrex"
Documentation = "https://github.com/hanshannus/imgrex#readme"

[build-system]
requires      = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

# ---------------------------------------------------------------------------
# UV dev tooling
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pydantic>=2.0",
    "ruff>=0.8",
    "mypy>=1.10",
    "prek>=0.3.5",
    "commitizen>=4.13.9",
    "types-pyyaml>=6.0.12.20250915",
    "zensical>=0.0.27",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict         = true
files          = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
