[project]
name = "imbrex"
version = "0.2.1"
description = "Hierarchical configuration management — YAML, TOML and JSON with Pydantic validation"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Johannes Hecher-Wulff", email = "yoshymail@gmail.com" }]
keywords = ["configuration", "settings", "yaml", "toml", "json", "pydantic", "hierarchical"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
pydantic = ["pydantic>=2.0"]
aws = ["boto3>=1.34"]
azure = [
    "azure-identity>=1.17",
    "azure-keyvault-secrets>=4.9",
]
gcp = ["google-cloud-secret-manager>=2.21"]
secrets = [
    "boto3>=1.34",
    "azure-identity>=1.17",
    "azure-keyvault-secrets>=4.9",
    "google-cloud-secret-manager>=2.21",
]
full = [
    "pydantic>=2.0",
    "boto3>=1.34",
    "azure-identity>=1.17",
    "azure-keyvault-secrets>=4.9",
    "google-cloud-secret-manager>=2.21",
]

[project.urls]
Repository    = "https://github.com/hanshannus/imbrex"
Documentation = "https://github.com/hanshannus/imbrex#readme"

[build-system]
requires      = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

# ---------------------------------------------------------------------------
# UV dev tooling
# ---------------------------------------------------------------------------

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pydantic>=2.0",
    "ruff>=0.8",
    "mypy>=1.10",
    "prek>=0.3.5",
    "commitizen>=4.13.9",
    "types-pyyaml>=6.0.12.20250915",
    "zensical>=0.0.27",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict         = true
files          = ["src"]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"
markers = [
    "integration: marks tests that require external systems or credentials",
    "aws: marks tests that talk to AWS Secrets Manager",
    "azure: marks tests that talk to Azure Key Vault",
    "gcp: marks tests that talk to Google Secret Manager",
]
